cargo-features = ["resolver"]

[workspace]
members = [
	"bin/node/cli",
    "bin/node/runtime",
    "frame/realis-game-api",
    "frame/staking-pool",
    "frame/nft",
]

[patch.'https://github.com/paritytech/substrate']
node-runtime = { path = "bin/node/runtime" }

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"
